--- a/dashboard/src/main/resources/dashboard-client/app/views/addmediaComponent.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/addmediaComponent.html
@@ -5,7 +5,9 @@
                 <input placeholder="Title" class="form-control margin15down ng-pristine ng-valid" ng-model="obj.title" type="text" name="mediaTitle{{$index}}">
                 <h6 ng-show="nameForm.mediaTitle{{$index}}.$invalid && !nameForm.mediaTitle{{$index}}.$pristine" class="help-block">Media title cannot be empty</h6>
             </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"><i ng-click="removeMedia($index)" class="fa fa-close"></i></div>
+            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                <button type=" button" ng-click="removeMedia($index)" class="btn btn-default btn-xs ">&#x274c;</button>
+            </div>
         </div>
         <div class="row">
             <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
