--- a/dashboard/src/main/resources/dashboard-client/app/views/home.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/home.html
@@ -6,7 +6,7 @@
                 <img ng-src="{{profile.image}}" class="img-responsive" alt="{{profile.name}}">
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                <h4>{{profle.name}} <a ui-sref="editProfile({id:profile.id})">Edit</a></h4>
+                <h4>{{profle.name}}</h4>
                 <h5>Email: {{profile.email}}</h5>
                 <h5>Role {{profile.role}}</h5>
                 <h5>Contributions: {{profile.contributions}}</h5>
@@ -77,7 +77,8 @@
         </div>
     </div>
 </div>
-<div class="row rowClearance">
+<!-- TODO to be implemented on server -->
+<!-- <div class="row rowClearance">
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -102,4 +103,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
