--- a/dashboard/src/main/resources/dashboard-client/app/views/list.edit.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/list.edit.html
@@ -1,5 +1,2 @@
-<div id="child-page-title">
-  .::{{ childTitle }}::.
-</div>
-
-<nameEntry action="put" duplicates="true"></nameEntry>
+<nameEntry action="put" duplicates="true">
+</nameEntry>
