--- a/dashboard/src/main/resources/dashboard-client/app/views/list.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/list.html
@@ -1,6 +1,7 @@
 <ol class="breadcrumb">
     <li><a href="#">Home</a></li>
-    <li class="active">List</li>
+    <li><a href="#/list/all">List</a></li>
+    <li class="active">Edit Entry</li>
 </ol>
 <div ui-view></div>
 </div>
