--- a/dashboard/src/main/resources/dashboard-client/app/views/addEtymologyComponent.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/addEtymologyComponent.html
@@ -6,8 +6,10 @@
     <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
         <input placeholder="Meaning" class="form-control margin15down ng-pristine ng-valid" ng-model="obj.meaning" type="text" name="etymologyMeaning{{$index}}">
         <h6 ng-show="nameForm.etymologyMeaning{{$index}}.$invalid && !nameForm.etymologyMeaning{{$index}}.$pristine" class="help-block">This etymology meaning text box cannot be empty</h6>
+    </div><div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+
+        <button type=" button" ng-click="removeEtymology($index)" class="btn btn-default btn-xs ">&#x274c;</button>
     </div>
-    <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"><i ng-click="removeEtymology($index)" class="fa fa-close"></i></div>
 </div>
-<br class="ng-scope" ng-if="formEntry.etymology.length> 0">
+<br class="ng-scope " ng-if="formEntry.etymology.length> 0">
 <button type="button" ng-click="addEtymology()" class="btn btn-sm btn-inverse">Add</button>
