YOR-41, YOR-39: Some ground work to make implementation of #41 and #39 more intuitive

--- a/website/src/main/resources/website/error.hbs
+++ b/website/src/main/resources/website/error.hbs
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    {{> headHtml }}
+    {{> header }}
 </head>
 
 <body>
-Ohun Oju ri enu adake.
+Default error page
 </body>
 </html>
