--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -9,7 +9,12 @@
 <body>
 <div class="wrapper">
 {{ title }}
+    <br/>
 
+    <h4>This page shows the listing for a name </h4>
+    id: {{ name.id }}<br/>
+    name: {{ name.name }}<br/>
+    submitted by: {{ name.submittedBy }}<br/>
 </div>
 <!-- Javascript -->
 {{> scriptIncludes }}
