--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -26,7 +26,7 @@
                     <li><h5 class="pri-color">{{message "lang.latest-search"}}</h5></li>
                     <hr />
                     {{#each latestSearches}}
-                        <li>{{this.name}}</li>
+                        <li><a href="/entries/{{this.name}}">{{this.name}}</a></li>
                     {{/each}}
                 </ul>
             </div>
@@ -35,7 +35,7 @@
                     <li><h5 class="pri-color">{{message "lang.latest-add"}}</h5></li>
                     <hr />
                     {{#each latestAdditions}}
-                        <li>{{this.name}}</li>
+                        <li><a href="/entries/{{this.name}}">{{this.name}}</a></li>
                     {{/each}}
                 </ul>
             </div>
@@ -44,7 +44,7 @@
                     <li><h5 class="pri-color">{{message "lang.most-popular"}}</h5></li>
                     <hr />
                     {{#each mostPopular}}
-                        <li>{{this.name}}</li>
+                        <li><a href="/entries/{{this.name}}">{{this.name}}</a></li>
                     {{/each}}
                 </ul>
             </div>
