--- a/dashboard/src/main/resources/dashboard-client/app/views/entry.upload.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/entry.upload.html
@@ -3,12 +3,10 @@
         {{msg.text}}
     </div>
     <div class="form-group">
-        <div class="col-sm-4">
-            <h5>{{filename}}</h5>
-            <div class="fileUpload btn btn-default btn-lg" style="margin-top: 5px; margin-bottom: 10px">
-                <span>Select Template to Upload</span>
-                <input type="file" file-model="namesfile" name="nameFiles" class="upload" />
-                <!--  <h6 ng-show="uploadForm.nameFiles.$invalid && !uploadForm.nameFiles.$pristine" class="help-block">A valid nameFiles is required</h6> -->
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="button" ngf-select ng-model="files">Select a templete to upload</div>
+                <h5>{{filename}}</h5>
             </div>
         </div>
     </div>
@@ -16,7 +14,7 @@
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-danger">
             <h6>*This file contains the following invalid columns</h6>
             <ul class="list-group">
-                <li class="list-group-item" ng-repeat="column in invalidColumns">{{column}}</li>
+                <li class="list-group-item" ng-repeat="column in invalidColumns track by $index">{{column}}</li>
             </ul>
         </div>
     </div>
@@ -24,13 +22,13 @@
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-danger">
             <h6>*Error occured on the following rows</h6>
             <ul class="list-group">
-                <li class="list-group-item" ng-repeat="column in postErrors">{{column}}</li>
+                <li class="list-group-item" ng-repeat="column in postErrors track by $index">{{column}}</li>
             </ul>
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group" ng-if="validFile">
         <div class="col-sm-4">
-            <button ng-click="parseForm()" ng-show="validFile" class="btn btn-success">Upload Now</button>
+            <button ng-click="upload(files)" class="btn btn-success">Upload Now</button>
         </div>
     </div>
 </form>
