--- a/dashboard/src/main/resources/dashboard-client/app/views/list.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/list.html
@@ -1,7 +1,6 @@
 <ol class="breadcrumb">
-    <li><a href="#">Home</a></li>
-    <li><a href="#/list/all">List</a></li>
-    <li class="active">Edit Entry</li>
+    <li><a ui-sref="home">Home</a></li>
+    <li><a ui-sref="list.all">List</a></li>
 </ol>
 <div ui-view></div>
 </div>
